kubernetes/tasks-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks
  template:
    metadata:
      labels:
        app: tasks
    spec:
      containers:
        - name: tasks
          image: aleksandromilenkov/kub-demo-tasks:latest
          imagePullPolicy: Always 
          ports:
            - containerPort: 8000
