kubernetes/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
