kubernetes/tasks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-service
spec:
  selector:
    app: tasks
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
